Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1029,6 +1029,7 @@
 188.134.74.150 xmlrpc;
 188.143.218.112 xmlrpc;
 188.16.109.253 xmlrpc;
+188.166.187.53 xmlrpc;
 188.166.231.114 xmlrpc;
 188.166.237.236 xmlrpc;
 188.166.252.45 xmlrpc;
@@ -2300,6 +2301,7 @@
 92.53.96.103 xmlrpc;
 92.53.96.106 xmlrpc;
 92.53.96.114 xmlrpc;
+92.53.96.116 xmlrpc;
 92.53.96.12 xmlrpc;
 92.53.96.131 xmlrpc;
 92.53.96.147 xmlrpc;
