--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -347,6 +347,7 @@
 123.249.120.185 xmlrpc;
 123.249.35.29 xmlrpc;
 123.56.69.68 xmlrpc;
+123.56.81.27 xmlrpc;
 123.56.86.45 xmlrpc;
 123.57.181.101 xmlrpc;
 123.57.192.127 xmlrpc;
