Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -126,7 +126,6 @@
 109.248.14.111 xmlrpc;
 109.248.15.194 xmlrpc;
 109.248.167.64 xmlrpc;
-109.248.205.143 xmlrpc;
 109.248.252.154 xmlrpc;
 109.248.49.217 xmlrpc;
 109.248.55.164 xmlrpc;
@@ -968,6 +967,7 @@
 185.253.183.167 xmlrpc;
 185.253.183.221 xmlrpc;
 185.253.183.243 xmlrpc;
+185.26.122.24 xmlrpc;
 185.26.122.68 xmlrpc;
 185.26.122.73 xmlrpc;
 185.26.122.81 xmlrpc;
@@ -1372,7 +1372,6 @@
 218.16.68.214 xmlrpc;
 218.186.143.62 xmlrpc;
 218.212.97.89 xmlrpc;
-218.57.210.186 xmlrpc;
 219.136.129.58 xmlrpc;
 219.151.134.114 xmlrpc;
 219.151.150.220 xmlrpc;
@@ -1415,6 +1414,7 @@
 2402:1f00:8001:124f:: xmlrpc;
 2406:da18:431:4700:56fc:4c80:e1c3:437e xmlrpc;
 2406:da18:9e3:ec00:6b0a:d4bf:4e3f:7ffa xmlrpc;
+2406:da18:ca1:6100:9f0a:38db:5c1:ae4f xmlrpc;
 2406:da18:f6e:f100:79a7:5756:f22:356e xmlrpc;
 240e:d9:c200:141:776b::cc0 xmlrpc;
 27.128.246.110 xmlrpc;
