--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -42,6 +42,7 @@
 103.151.172.93 xmlrpc;
 103.152.227.149 xmlrpc;
 103.164.63.148 xmlrpc;
+103.167.150.74 xmlrpc;
 103.172.134.26 xmlrpc;
 103.178.56.5 xmlrpc;
 103.189.88.194 xmlrpc;
@@ -692,6 +693,7 @@
 176.50.136.127 xmlrpc;
 176.52.113.141 xmlrpc;
 176.52.18.160 xmlrpc;
+176.53.162.70 xmlrpc;
 176.53.193.30 xmlrpc;
 176.53.211.62 xmlrpc;
 176.59.1.22 xmlrpc;
@@ -833,6 +835,7 @@
 182.43.78.109 xmlrpc;
 182.43.78.115 xmlrpc;
 182.43.79.24 xmlrpc;
+182.50.132.102 xmlrpc;
 182.50.132.115 xmlrpc;
 182.50.135.36 xmlrpc;
 182.50.135.55 xmlrpc;
@@ -1422,6 +1425,7 @@
 2a00:1838:37:1c6::38ed xmlrpc;
 2a00:f940:2:1:2:0:1:496d xmlrpc;
 2a02:4780:3:694:0:1960:fb4d:1 xmlrpc;
+2a02:4780:e:f10c::1 xmlrpc;
 2a03:6f00:1::5c35:6067 xmlrpc;
 2a03:6f00:1::5c35:606a xmlrpc;
 2a03:6f00:1::5c35:6083 xmlrpc;
