--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1423,6 +1423,7 @@
 2406:da18:9e3:ec00:6b0a:d4bf:4e3f:7ffa xmlrpc;
 2406:da18:ca1:6100:9f0a:38db:5c1:ae4f xmlrpc;
 2406:da18:f6e:f100:79a7:5756:f22:356e xmlrpc;
+2407:1c00:6300:d200:: xmlrpc;
 240e:d9:c200:141:776b::cc0 xmlrpc;
 27.128.246.110 xmlrpc;
 27.36.104.46 xmlrpc;
