Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1164,7 +1164,6 @@
 194.146.240.144 xmlrpc;
 194.15.115.212 xmlrpc;
 194.190.1.194 xmlrpc;
-194.195.90.110 xmlrpc;
 194.233.64.69 xmlrpc;
 194.233.66.60 xmlrpc;
 194.32.229.140 xmlrpc;
@@ -1423,6 +1422,7 @@
 2406:da18:9e3:ec00:6b0a:d4bf:4e3f:7ffa xmlrpc;
 2406:da18:ca1:6100:9f0a:38db:5c1:ae4f xmlrpc;
 2406:da18:f6e:f100:79a7:5756:f22:356e xmlrpc;
+2406:ef80:2:254d::1 xmlrpc;
 2407:1c00:6300:d200:: xmlrpc;
 240e:d9:c200:141:776b::cc0 xmlrpc;
 27.128.246.110 xmlrpc;
@@ -2028,6 +2028,7 @@
 78.139.210.26 xmlrpc;
 78.142.235.4 xmlrpc;
 78.156.235.199 xmlrpc;
+78.25.172.162 xmlrpc;
 78.37.2.58 xmlrpc;
 79.126.114.157 xmlrpc;
 79.137.182.146 xmlrpc;
