Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1039,6 +1039,7 @@
 188.134.74.150 xmlrpc;
 188.143.218.112 xmlrpc;
 188.16.109.253 xmlrpc;
+188.162.250.60 xmlrpc;
 188.166.187.53 xmlrpc;
 188.166.231.114 xmlrpc;
 188.166.237.236 xmlrpc;
@@ -2324,6 +2325,7 @@
 92.53.96.131 xmlrpc;
 92.53.96.147 xmlrpc;
 92.53.96.150 xmlrpc;
+92.53.96.165 xmlrpc;
 92.53.96.173 xmlrpc;
 92.53.96.174 xmlrpc;
 92.53.96.179 xmlrpc;
