--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -975,6 +975,8 @@
 185.253.183.221 xmlrpc;
 185.253.183.243 xmlrpc;
 185.26.122.24 xmlrpc;
+185.26.122.52 xmlrpc;
+185.26.122.54 xmlrpc;
 185.26.122.68 xmlrpc;
 185.26.122.73 xmlrpc;
 185.26.122.81 xmlrpc;
