--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -343,6 +343,7 @@
 123.207.43.157 xmlrpc;
 123.207.46.236 xmlrpc;
 123.207.72.175 xmlrpc;
+123.249.105.181 xmlrpc;
 123.249.120.185 xmlrpc;
 123.249.35.29 xmlrpc;
 123.56.69.68 xmlrpc;
