--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1011,6 +1011,7 @@
 185.54.237.20 xmlrpc;
 185.59.246.172 xmlrpc;
 185.59.246.232 xmlrpc;
+185.61.217.128 xmlrpc;
 185.61.218.17 xmlrpc;
 185.61.221.85 xmlrpc;
 185.61.222.253 xmlrpc;
