--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1586,6 +1586,7 @@
 42.192.16.250 xmlrpc;
 42.193.17.124 xmlrpc;
 42.193.21.12 xmlrpc;
+42.2.109.81 xmlrpc;
 42.2.204.69 xmlrpc;
 42.231.18.105 xmlrpc;
 42.248.121.138 xmlrpc;
