--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -114,6 +114,7 @@
 109.184.212.152 xmlrpc;
 109.187.87.192 xmlrpc;
 109.194.248.147 xmlrpc;
+109.196.173.32 xmlrpc;
 109.229.246.63 xmlrpc;
 109.229.250.184 xmlrpc;
 109.229.78.194 xmlrpc;
@@ -934,6 +935,7 @@
 185.227.134.106 xmlrpc;
 185.228.135.226 xmlrpc;
 185.228.135.50 xmlrpc;
+185.23.66.29 xmlrpc;
 185.23.66.89 xmlrpc;
 185.233.92.211 xmlrpc;
 185.236.157.117 xmlrpc;
@@ -1304,6 +1306,7 @@
 212.7.225.92 xmlrpc;
 212.7.229.227 xmlrpc;
 212.7.251.250 xmlrpc;
+212.94.17.142 xmlrpc;
 212.94.25.195 xmlrpc;
 213.108.2.19 xmlrpc;
 213.138.91.164 xmlrpc;
@@ -1357,6 +1360,7 @@
 217.15.128.44 xmlrpc;
 217.15.159.8 xmlrpc;
 217.15.62.115 xmlrpc;
+217.150.36.9 xmlrpc;
 217.151.224.111 xmlrpc;
 217.151.225.200 xmlrpc;
 217.23.67.62 xmlrpc;
@@ -2274,6 +2278,7 @@
 91.236.143.156 xmlrpc;
 91.236.247.200 xmlrpc;
 91.236.80.221 xmlrpc;
+91.238.64.2 xmlrpc;
 91.240.191.122 xmlrpc;
 91.241.255.48 xmlrpc;
 91.243.91.154 xmlrpc;
