Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2305,6 +2305,7 @@
 92.223.86.15 xmlrpc;
 92.223.86.9 xmlrpc;
 92.240.221.127 xmlrpc;
+92.246.154.252 xmlrpc;
 92.248.137.83 xmlrpc;
 92.252.143.106 xmlrpc;
 92.252.170.223 xmlrpc;
