--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -669,6 +669,7 @@
 176.122.59.203 xmlrpc;
 176.14.168.157 xmlrpc;
 176.192.146.254 xmlrpc;
+176.195.189.182 xmlrpc;
 176.195.226.62 xmlrpc;
 176.196.75.72 xmlrpc;
 176.208.15.69 xmlrpc;
@@ -686,6 +687,7 @@
 176.53.162.70 xmlrpc;
 176.53.193.30 xmlrpc;
 176.53.211.62 xmlrpc;
+176.57.72.44 xmlrpc;
 176.59.1.22 xmlrpc;
 176.59.106.106 xmlrpc;
 176.59.11.156 xmlrpc;
