--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2281,6 +2281,7 @@
 91.226.166.196 xmlrpc;
 91.226.167.133 xmlrpc;
 91.226.167.87 xmlrpc;
+91.227.46.94 xmlrpc;
 91.231.95.28 xmlrpc;
 91.233.44.2 xmlrpc;
 91.236.142.148 xmlrpc;
@@ -2513,6 +2514,7 @@
 95.54.231.96 xmlrpc;
 95.55.58.181 xmlrpc;
 95.55.69.131 xmlrpc;
+95.66.171.46 xmlrpc;
 95.66.194.78 xmlrpc;
 95.66.236.10 xmlrpc;
 95.68.131.78 xmlrpc;
