--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -477,6 +477,7 @@
 145.255.8.115 xmlrpc;
 145.255.9.151 xmlrpc;
 145.255.9.38 xmlrpc;
+145.255.9.81 xmlrpc;
 146.120.197.143 xmlrpc;
 146.158.108.137 xmlrpc;
 146.158.111.248 xmlrpc;
