--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -777,6 +777,7 @@
 178.46.107.97 xmlrpc;
 178.46.121.212 xmlrpc;
 178.57.116.166 xmlrpc;
+178.57.235.131 xmlrpc;
 178.66.28.65 xmlrpc;
 178.67.15.234 xmlrpc;
 178.67.192.28 xmlrpc;
