--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2020,6 +2020,7 @@
 66.42.53.81 xmlrpc;
 66.42.60.37 xmlrpc;
 68.183.179.149 xmlrpc;
+68.183.180.233 xmlrpc;
 68.183.183.15 xmlrpc;
 68.183.186.147 xmlrpc;
 68.183.228.161 xmlrpc;
