--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2101,6 +2101,7 @@
 80.234.78.97 xmlrpc;
 80.237.123.18 xmlrpc;
 80.237.123.63 xmlrpc;
+80.244.42.61 xmlrpc;
 80.244.43.90 xmlrpc;
 80.244.44.140 xmlrpc;
 80.251.227.61 xmlrpc;
@@ -2185,6 +2186,7 @@
 85.239.38.206 xmlrpc;
 85.249.31.203 xmlrpc;
 85.30.222.184 xmlrpc;
+85.93.58.0 xmlrpc;
 85.95.188.147 xmlrpc;
 85.95.189.123 xmlrpc;
 85.95.189.146 xmlrpc;
@@ -2236,6 +2238,7 @@
 89.106.173.182 xmlrpc;
 89.109.44.193 xmlrpc;
 89.109.47.143 xmlrpc;
+89.109.48.239 xmlrpc;
 89.109.48.99 xmlrpc;
 89.109.49.215 xmlrpc;
 89.109.50.45 xmlrpc;
@@ -2370,6 +2373,7 @@
 93.100.175.23 xmlrpc;
 93.100.31.98 xmlrpc;
 93.120.167.26 xmlrpc;
+93.120.175.13 xmlrpc;
 93.123.217.180 xmlrpc;
 93.124.92.125 xmlrpc;
 93.124.96.204 xmlrpc;
