Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -773,6 +773,7 @@
 178.34.162.148 xmlrpc;
 178.34.83.230 xmlrpc;
 178.45.171.89 xmlrpc;
+178.45.172.13 xmlrpc;
 178.46.107.97 xmlrpc;
 178.46.110.79 xmlrpc;
 178.46.121.212 xmlrpc;
@@ -1095,6 +1096,7 @@
 188.254.126.236 xmlrpc;
 188.255.22.119 xmlrpc;
 188.255.53.140 xmlrpc;
+188.35.131.221 xmlrpc;
 188.43.205.201 xmlrpc;
 188.64.167.176 xmlrpc;
 188.65.17.178 xmlrpc;
@@ -2028,6 +2030,7 @@
 68.183.228.161 xmlrpc;
 68.183.234.223 xmlrpc;
 77.220.192.30 xmlrpc;
+77.220.50.99 xmlrpc;
 77.222.100.189 xmlrpc;
 77.222.103.146 xmlrpc;
 77.222.106.102 xmlrpc;
