--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -924,6 +924,7 @@
 185.15.38.126 xmlrpc;
 185.15.38.19 xmlrpc;
 185.15.38.31 xmlrpc;
+185.15.38.34 xmlrpc;
 185.15.38.48 xmlrpc;
 185.15.38.67 xmlrpc;
 185.152.95.108 xmlrpc;
@@ -1036,8 +1037,10 @@
 185.9.78.21 xmlrpc;
 185.90.102.46 xmlrpc;
 185.95.106.204 xmlrpc;
+185.99.6.45 xmlrpc;
 185.99.7.68 xmlrpc;
 188.0.169.118 xmlrpc;
+188.0.169.73 xmlrpc;
 188.0.175.16 xmlrpc;
 188.0.175.17 xmlrpc;
 188.0.189.151 xmlrpc;
@@ -1556,6 +1559,7 @@
 31.41.62.75 xmlrpc;
 31.43.223.161 xmlrpc;
 31.6.114.191 xmlrpc;
+31.6.96.113 xmlrpc;
 34.124.147.91 xmlrpc;
 34.126.127.235 xmlrpc;
 34.142.151.15 xmlrpc;
@@ -2020,6 +2024,7 @@
 5.59.140.238 xmlrpc;
 5.59.222.41 xmlrpc;
 5.59.246.29 xmlrpc;
+5.59.31.8 xmlrpc;
 5.8.20.168 xmlrpc;
 5.8.20.170 xmlrpc;
 5.8.59.30 xmlrpc;
@@ -2084,6 +2089,7 @@
 77.37.161.73 xmlrpc;
 77.37.240.207 xmlrpc;
 77.40.2.201 xmlrpc;
+77.43.190.59 xmlrpc;
 77.43.246.75 xmlrpc;
 77.50.102.168 xmlrpc;
 77.51.80.75 xmlrpc;
@@ -2151,6 +2157,7 @@
 80.244.42.61 xmlrpc;
 80.244.43.90 xmlrpc;
 80.244.44.140 xmlrpc;
+80.246.81.133 xmlrpc;
 80.251.227.61 xmlrpc;
 80.251.229.35 xmlrpc;
 80.251.232.16 xmlrpc;
@@ -2327,6 +2334,7 @@
 90.188.229.234 xmlrpc;
 90.188.48.252 xmlrpc;
 91.107.117.48 xmlrpc;
+91.108.29.35 xmlrpc;
 91.109.225.52 xmlrpc;
 91.122.85.131 xmlrpc;
 91.123.31.86 xmlrpc;
