--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -659,6 +659,7 @@
 176.106.151.121 xmlrpc;
 176.106.157.66 xmlrpc;
 176.108.197.237 xmlrpc;
+176.109.26.116 xmlrpc;
 176.109.36.33 xmlrpc;
 176.110.129.92 xmlrpc;
 176.110.134.73 xmlrpc;
@@ -1543,6 +1544,7 @@
 31.220.110.3 xmlrpc;
 31.23.195.198 xmlrpc;
 31.23.93.193 xmlrpc;
+31.28.221.10 xmlrpc;
 31.29.193.147 xmlrpc;
 31.31.196.139 xmlrpc;
 31.31.196.157 xmlrpc;
@@ -1763,6 +1765,7 @@
 45.84.177.232 xmlrpc;
 45.84.177.93 xmlrpc;
 45.86.44.166 xmlrpc;
+45.86.45.28 xmlrpc;
 45.86.45.8 xmlrpc;
 45.87.252.109 xmlrpc;
 45.87.253.183 xmlrpc;
@@ -1972,6 +1975,7 @@
 5.18.246.165 xmlrpc;
 5.18.252.244 xmlrpc;
 5.18.253.205 xmlrpc;
+5.18.255.251 xmlrpc;
 5.18.255.34 xmlrpc;
 5.18.85.103 xmlrpc;
 5.181.169.28 xmlrpc;
@@ -1990,6 +1994,7 @@
 5.206.10.214 xmlrpc;
 5.227.10.212 xmlrpc;
 5.227.203.6 xmlrpc;
+5.227.28.46 xmlrpc;
 5.227.30.21 xmlrpc;
 5.228.176.57 xmlrpc;
 5.228.4.204 xmlrpc;
@@ -2107,6 +2112,7 @@
 77.238.134.163 xmlrpc;
 77.35.157.73 xmlrpc;
 77.37.161.73 xmlrpc;
+77.37.232.193 xmlrpc;
 77.37.240.207 xmlrpc;
 77.40.2.201 xmlrpc;
 77.43.190.59 xmlrpc;
@@ -2368,6 +2374,7 @@
 91.195.204.111 xmlrpc;
 91.195.204.125 xmlrpc;
 91.195.204.99 xmlrpc;
+91.196.84.4 xmlrpc;
 91.197.64.56 xmlrpc;
 91.201.236.112 xmlrpc;
 91.201.236.117 xmlrpc;
@@ -2457,6 +2464,7 @@
 92.53.96.223 xmlrpc;
 92.53.97.221 xmlrpc;
 92.53.99.196 xmlrpc;
+92.62.57.108 xmlrpc;
 92.62.57.200 xmlrpc;
 92.62.57.255 xmlrpc;
 92.62.59.27 xmlrpc;
