--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -771,6 +771,7 @@
 178.213.28.197 xmlrpc;
 178.214.164.135 xmlrpc;
 178.214.246.197 xmlrpc;
+178.214.248.122 xmlrpc;
 178.214.249.243 xmlrpc;
 178.215.157.24 xmlrpc;
 178.215.72.35 xmlrpc;
@@ -1139,6 +1140,7 @@
 188.254.110.161 xmlrpc;
 188.254.126.230 xmlrpc;
 188.254.126.236 xmlrpc;
+188.254.126.95 xmlrpc;
 188.255.22.119 xmlrpc;
 188.255.53.140 xmlrpc;
 188.35.131.221 xmlrpc;
@@ -1649,6 +1651,7 @@
 37.79.142.251 xmlrpc;
 37.79.21.191 xmlrpc;
 37.79.26.186 xmlrpc;
+37.79.68.5 xmlrpc;
 37.79.8.195 xmlrpc;
 39.101.185.186 xmlrpc;
 39.101.72.35 xmlrpc;
@@ -2284,6 +2287,7 @@
 85.174.205.140 xmlrpc;
 85.174.207.184 xmlrpc;
 85.174.41.125 xmlrpc;
+85.192.189.22 xmlrpc;
 85.192.189.7 xmlrpc;
 85.202.225.25 xmlrpc;
 85.209.1.82 xmlrpc;
