Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2012,6 +2012,7 @@
 5.188.62.21 xmlrpc;
 5.188.62.26 xmlrpc;
 5.188.62.76 xmlrpc;
+5.19.252.44 xmlrpc;
 5.19.99.93 xmlrpc;
 5.2.56.89 xmlrpc;
 5.206.10.214 xmlrpc;
