--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1545,6 +1545,7 @@
 31.134.188.232 xmlrpc;
 31.134.188.38 xmlrpc;
 31.135.248.73 xmlrpc;
+31.135.63.153 xmlrpc;
 31.148.118.27 xmlrpc;
 31.148.174.77 xmlrpc;
 31.148.35.9 xmlrpc;
