--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -236,6 +236,7 @@
 117.50.190.128 xmlrpc;
 118.123.4.243 xmlrpc;
 118.123.4.248 xmlrpc;
+118.195.130.163 xmlrpc;
 118.195.131.103 xmlrpc;
 118.195.132.31 xmlrpc;
 118.195.251.11 xmlrpc;
@@ -2075,6 +2076,7 @@
 5.59.31.8 xmlrpc;
 5.8.20.168 xmlrpc;
 5.8.20.170 xmlrpc;
+5.8.22.56 xmlrpc;
 5.8.59.30 xmlrpc;
 50.114.59.19 xmlrpc;
 51.79.160.196 xmlrpc;
