--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2052,6 +2052,7 @@
 5.255.231.39 xmlrpc;
 5.255.231.46 xmlrpc;
 5.255.231.56 xmlrpc;
+5.255.231.67 xmlrpc;
 5.255.231.76 xmlrpc;
 5.255.231.78 xmlrpc;
 5.255.231.82 xmlrpc;
