--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -434,6 +434,7 @@
 139.162.39.171 xmlrpc;
 139.162.39.227 xmlrpc;
 139.162.41.117 xmlrpc;
+139.162.44.187 xmlrpc;
 139.162.51.17 xmlrpc;
 139.162.60.22 xmlrpc;
 139.177.184.40 xmlrpc;
