--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -127,6 +127,7 @@
 109.248.12.243 xmlrpc;
 109.248.129.47 xmlrpc;
 109.248.14.111 xmlrpc;
+109.248.142.88 xmlrpc;
 109.248.143.250 xmlrpc;
 109.248.15.194 xmlrpc;
 109.248.167.64 xmlrpc;
@@ -1075,6 +1076,7 @@
 188.124.242.23 xmlrpc;
 188.126.45.19 xmlrpc;
 188.130.128.161 xmlrpc;
+188.130.128.43 xmlrpc;
 188.130.129.129 xmlrpc;
 188.130.129.5 xmlrpc;
 188.130.136.219 xmlrpc;
@@ -1871,10 +1873,12 @@
 46.8.15.233 xmlrpc;
 46.8.155.38 xmlrpc;
 46.8.16.220 xmlrpc;
+46.8.212.11 xmlrpc;
 46.8.22.153 xmlrpc;
 46.8.22.184 xmlrpc;
 46.8.22.96 xmlrpc;
 46.8.223.80 xmlrpc;
+46.8.23.24 xmlrpc;
 46.8.241.143 xmlrpc;
 46.8.241.144 xmlrpc;
 46.8.245.134 xmlrpc;
