--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1433,6 +1433,7 @@
 213.24.125.82 xmlrpc;
 213.24.126.224 xmlrpc;
 213.24.127.137 xmlrpc;
+213.24.133.198 xmlrpc;
 213.24.133.245 xmlrpc;
 213.24.134.51 xmlrpc;
 213.24.134.77 xmlrpc;
@@ -2151,6 +2152,7 @@
 77.51.80.75 xmlrpc;
 77.75.8.55 xmlrpc;
 78.132.156.23 xmlrpc;
+78.132.172.127 xmlrpc;
 78.132.205.67 xmlrpc;
 78.139.210.26 xmlrpc;
 78.142.235.4 xmlrpc;
@@ -2283,6 +2285,7 @@
 83.97.117.230 xmlrpc;
 83.97.119.225 xmlrpc;
 83.97.73.159 xmlrpc;
+84.42.76.200 xmlrpc;
 84.51.209.212 xmlrpc;
 84.53.198.138 xmlrpc;
 84.53.198.163 xmlrpc;
@@ -2373,6 +2376,7 @@
 89.109.49.215 xmlrpc;
 89.109.50.45 xmlrpc;
 89.109.51.174 xmlrpc;
+89.113.140.146 xmlrpc;
 89.113.26.208 xmlrpc;
 89.151.186.124 xmlrpc;
 89.151.187.127 xmlrpc;
@@ -2440,6 +2444,7 @@
 91.226.15.109 xmlrpc;
 91.226.15.113 xmlrpc;
 91.226.15.51 xmlrpc;
+91.226.164.72 xmlrpc;
 91.226.165.101 xmlrpc;
 91.226.165.131 xmlrpc;
 91.226.166.196 xmlrpc;
@@ -2457,6 +2462,7 @@
 91.236.247.200 xmlrpc;
 91.236.80.221 xmlrpc;
 91.238.64.2 xmlrpc;
+91.241.251.106 xmlrpc;
 91.241.255.48 xmlrpc;
 91.243.91.154 xmlrpc;
 91.245.129.155 xmlrpc;
