--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -586,6 +586,7 @@
 156.146.56.114 xmlrpc;
 156.146.56.119 xmlrpc;
 156.227.14.155 xmlrpc;
+156.227.14.165 xmlrpc;
 157.230.33.236 xmlrpc;
 157.230.46.166 xmlrpc;
 157.230.47.181 xmlrpc;
