--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -320,6 +320,7 @@
 123.13.59.172 xmlrpc;
 123.13.59.21 xmlrpc;
 123.13.59.241 xmlrpc;
+123.13.59.28 xmlrpc;
 123.13.59.96 xmlrpc;
 123.13.60.140 xmlrpc;
 123.13.60.173 xmlrpc;
