--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1883,6 +1883,7 @@
 46.8.22.184 xmlrpc;
 46.8.22.96 xmlrpc;
 46.8.223.80 xmlrpc;
+46.8.23.180 xmlrpc;
 46.8.23.24 xmlrpc;
 46.8.241.143 xmlrpc;
 46.8.241.144 xmlrpc;
