--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2574,6 +2574,7 @@
 95.106.69.232 xmlrpc;
 95.106.88.137 xmlrpc;
 95.107.120.48 xmlrpc;
+95.107.29.44 xmlrpc;
 95.108.213.119 xmlrpc;
 95.108.213.126 xmlrpc;
 95.108.213.128 xmlrpc;
