--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1980,6 +1980,7 @@
 5.167.144.142 xmlrpc;
 5.167.144.234 xmlrpc;
 5.18.176.219 xmlrpc;
+5.18.180.232 xmlrpc;
 5.18.181.20 xmlrpc;
 5.18.201.236 xmlrpc;
 5.18.236.43 xmlrpc;
