--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -510,6 +510,7 @@
 146.190.92.144 xmlrpc;
 146.190.97.43 xmlrpc;
 146.56.198.139 xmlrpc;
+146.66.10.220 xmlrpc;
 146.66.10.96 xmlrpc;
 146.70.192.174 xmlrpc;
 146.70.29.185 xmlrpc;
