--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1630,6 +1630,7 @@
 37.19.72.35 xmlrpc;
 37.19.76.30 xmlrpc;
 37.19.77.182 xmlrpc;
+37.20.154.14 xmlrpc;
 37.20.213.87 xmlrpc;
 37.200.123.157 xmlrpc;
 37.200.73.57 xmlrpc;
