--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2281,6 +2281,7 @@
 85.113.213.131 xmlrpc;
 85.113.213.7 xmlrpc;
 85.115.248.57 xmlrpc;
+85.117.82.141 xmlrpc;
 85.140.163.95 xmlrpc;
 85.140.22.162 xmlrpc;
 85.143.173.5 xmlrpc;
