Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -942,6 +942,7 @@
 185.15.38.67 xmlrpc;
 185.152.95.108 xmlrpc;
 185.16.106.75 xmlrpc;
+185.16.137.242 xmlrpc;
 185.16.138.138 xmlrpc;
 185.16.138.156 xmlrpc;
 185.16.138.85 xmlrpc;
@@ -2432,6 +2433,7 @@
 91.226.164.72 xmlrpc;
 91.226.165.101 xmlrpc;
 91.226.165.131 xmlrpc;
+91.226.165.206 xmlrpc;
 91.226.166.196 xmlrpc;
 91.226.167.133 xmlrpc;
 91.226.167.87 xmlrpc;
