Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -750,6 +750,7 @@
 178.17.180.141 xmlrpc;
 178.170.198.141 xmlrpc;
 178.170.253.23 xmlrpc;
+178.173.94.24 xmlrpc;
 178.176.112.7 xmlrpc;
 178.176.138.49 xmlrpc;
 178.176.138.51 xmlrpc;
@@ -2158,6 +2159,7 @@
 79.136.213.30 xmlrpc;
 79.137.182.146 xmlrpc;
 79.139.140.4 xmlrpc;
+79.139.141.35 xmlrpc;
 79.139.206.191 xmlrpc;
 79.139.244.244 xmlrpc;
 79.141.208.34 xmlrpc;
@@ -2204,6 +2206,7 @@
 80.244.42.61 xmlrpc;
 80.244.43.90 xmlrpc;
 80.244.44.140 xmlrpc;
+80.244.45.151 xmlrpc;
 80.246.81.133 xmlrpc;
 80.246.94.129 xmlrpc;
 80.251.227.61 xmlrpc;
